[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"
[project]
name = "reasoning-machine"
version = "0.0.1"
authors = [
    {name="Alexander Fedotov", email="alex.fedotov@aol.com"},
]
description = "Reasoning Machine"
readme = "README.md"
requires-python = ">=3.10"
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://github.com/reasoning-machine/reasoning-machine"
"Bug Tracker" = "https://github.com/reasoning-machine/reasoning-machine/issues"